--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "_from": "vue-src-to-specs",
-  "_id": "vue-src-to-specs@1.0.1",
+  "__npminstall_done": "Mon Dec 17 2018 16:01:02 GMT+0800 (中国标准时间)",
+  "_from": "vue-src-to-specs@^1.1.3",
+  "_id": "vue-src-to-specs@1.1.6",
   "_inBundle": false,
-  "_integrity": "sha512-SGamBZjOynwCCreLJ2NEc0gDUWZnDVmgp213KZKO+WRD70wYAE9DvajX1ximnm/JIQflx5ityL2cgwBoHuYmdA==",
+  "_integrity": "sha512-ttdR4wmz6Ub4jBW5gYCERLMY/TEPu64LZkgbl5mokuTVu2xttK63Gx0UbKAYiNtSTGY7hOvIR+YsoeD9QDjnzQ==",
   "_location": "/vue-src-to-specs",
   "_phantomChildren": {},
   "_requested": {
-    "type": "tag",
+    "type": "range",
     "registry": true,
-    "raw": "vue-src-to-specs",
+    "raw": "vue-src-to-specs@^1.1.3",
     "name": "vue-src-to-specs",
     "escapedName": "vue-src-to-specs",
-    "rawSpec": "",
+    "rawSpec": "^1.1.3",
     "saveSpec": null,
-    "fetchSpec": "latest"
+    "fetchSpec": "^1.1.3"
   },
   "_requiredBy": [
     "#DEV:/",
     "#USER"
   ],
-  "_resolved": "https://registry.npmjs.org/vue-src-to-specs/-/vue-src-to-specs-1.0.1.tgz",
-  "_shasum": "01816f0f305c3761da03657bf95c8dd1927266a6",
-  "_spec": "vue-src-to-specs",
-  "_where": "C:\\Users\\66417\\Desktop\\node-io",
+  "_resolved": "https://registry.npmjs.org/vue-src-to-specs/-/vue-src-to-specs-1.1.6.tgz",
+  "_shasum": "d13353c25437fc2d143e655ad263c41ea4a1aa61",
+  "_spec": "vue-src-to-specs@^1.1.3",
+  "_where": "E:\\vue-test\\vue-null\\vue-specs-test",
   "author": {
     "name": "xinbo"
+  },
+  "bugs": {
+    "url": "https://github.com/xinbowang/vue-src-to-specs/issues"
   },
   "bundleDependencies": false,
   "deprecated": false,
   "description": "vue单元测试，test/unit/specs目录下生成和src对应的目录文件",
+  "homepage": "https://github.com/xinbowang/vue-src-to-specs#readme",
   "keywords": [
     "vue-src-to-specs",
     "生成specs目录"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xinbowang/vue-src-to-specs.git"
-  },
   "license": "ISC",
   "main": "index.js",
   "name": "vue-src-to-specs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xinbowang/vue-src-to-specs.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.1.5"
+  "version": "1.1.6"
 }
